@@ -1,3 +1,8 @@
+2002-08-22  Eric Blake  <ebb9@email.byu.edu>
+
+	* src/scanner.cpp (ScanSlashComment): Revert change that gave
+	error on //EOF, based on Sun bug 4386773.
+
 2002-08-21  Eric Blake  <ebb9@email.byu.edu>
 
 	* src/bytecode.cpp (StripNops): Minor bytecode optimization -
